Fixed lazy loading for about-pic and safari z-index problem and added icon

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -6,6 +6,8 @@ Nav {
 }
 
 footer {
+   -webkit-transform:translate3d(0,0,0);
+   transform: translate3d(0, 0, 0);
    height: 200px;
    font-size: 12px;
    position: fixed;
