--- a/src/assets/css/pages.css
+++ b/src/assets/css/pages.css
@@ -35,6 +35,7 @@ p{
 }
 
 .about-img {
+   height: 354px;
    width: 360px;
 }
 
@@ -123,6 +124,7 @@ p{
    }
 
    .about-img {
+      height: 227.78px;
       width: 240px;
    }
 
